Implement JPA-based repositories and mappers for Driver and Ride entities